[package]
name = "cargo-latest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
custom_error = "1.9.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.59"
serde = {version = "1.0.117", features = ["derive"]}
colored = "2.0.0"